css: fix progress bar overflowing in compact mode

--- a/browser/css/menubar.css
+++ b/browser/css/menubar.css
@@ -44,6 +44,7 @@
 	justify-content: center;
 	gap: 5px;
 	flex-direction: column;
+	width: fit-content;
 }
 
 .readonly .document-title {
